Run update-remote.sh